chnaged spaces to _ in folder names

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         // Function to dynamically generate the game list
         function generateGameList() {
             const gameListElement = document.getElementById('gameList');
-            const gameFolders = ['Orbit Example GM', 'Map Maker', /* ... */]; // Add more game folders as needed
+            const gameFolders = ['orbit_example', 'map_maker', /* ... */]; // Add more game folders as needed
 
             gameFolders.forEach(folder => {
                 const listItem = document.createElement('li');
