changed title to timeblade0's games

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Game Portal</title>
+    <title>timeblade0's Games</title>
 </head>
 <body>
     <h1>Game Portal</h1>
@@ -11,7 +11,7 @@
         // Function to dynamically generate the game list
         function generateGameList() {
             const gameListElement = document.getElementById('gameList');
-            const gameFolders = ['orbit_example', 'map_maker', /* ... */]; // Add more game folders as needed
+            const gameFolders = ['orbit_example', 'map_maker', 'game3', /* ... */]; // Add more game folders as needed
 
             gameFolders.forEach(folder => {
                 const listItem = document.createElement('li');
