changed header1 to timeblade0's games

--- a/index.html
+++ b/index.html
@@ -4,14 +4,14 @@
     <title>timeblade0's Games</title>
 </head>
 <body>
-    <h1>Game Portal</h1>
+    <h1>timeblade0's Games</h1>
     <ul id="gameList"></ul>
 
     <script>
         // Function to dynamically generate the game list
         function generateGameList() {
             const gameListElement = document.getElementById('gameList');
-            const gameFolders = ['orbit_example', 'map_maker', 'game3', /* ... */]; // Add more game folders as needed
+            const gameFolders = ['orbit_example', 'map_maker', 'WIP game3', /* ... */]; // Add more game folders as needed
 
             gameFolders.forEach(folder => {
                 const listItem = document.createElement('li');
