added mmx_gm game

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
         // Function to dynamically generate the game list
         function generateGameList() {
             const gameListElement = document.getElementById('gameList');
-            const gameFolders = ['orbit_example_gm', 'map_maker_gm', 'storm_eagle_gm', 'WIP game4', /* ... */]; // Add more game folders as needed
+            const gameFolders = ['orbit_example_gm', 'map_maker_gm', 'storm_eagle_gm', 'mmx_gm', /* ... */]; // Add more game folders as needed
 
             gameFolders.forEach(folder => {
                 const listItem = document.createElement('li');
