center title and links

--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <title>timeblade0's Games</title>
 </head>
 <body>
-    <h1>timeblade0's Games</h1>
-    <ul id="gameList"></ul>
+    <table align="center">
+        <tr>
+            <td>
+                <h1>timeblade0's Games</h1>
+                <ul id="gameList"></ul>
+            </td>
+        </tr>
+    </table>
 
     <script>
         // Function to dynamically generate the game list
